add bytebuddy for mockito compatibility